misc updates, May manuals

--- a/manuals.html
+++ b/manuals.html
@@ -60,7 +60,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-2l">ABX-2L-B-V2</a><br></td>
                 <td>AUTOBOX 2L<br>Hose tractor for dual flex lancing of exchanger tube IDs</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-B-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 673</a><br><small class="grey">Updated: 02/2022</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-B-V2_manual.pdf" target="_blank" class="btn btn-sm">PL 673</a><br><small class="grey">Updated: 04/2022</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-2L_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-2L-B-V2_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2021</small></td>
                 <td class="text-center"></td>
@@ -68,7 +68,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-3l">ABX-3L-V3</a><br></td>
                 <td>AUTOBOX 3L<br>Hose tractor for triple flex lancing of exchanger tube IDs </td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L-V3_manual.pdf" target="_blank" class="btn btn-sm">PL 702</a><br><small class="grey">Updated: 02/2022</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-3L-V3_manual.pdf" target="_blank" class="btn btn-sm">PL 702</a><br><small class="grey">Updated: 04/2022</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/Sentinel_brochure.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 01/2022</small></td>
                 <td class="text-center"></td>
@@ -92,7 +92,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-pro">ABX-PRO or PRODRIVE</a></td>
                 <td>AUTOBOX ABX-PRO<br>Automated hose control device for small pipe cleaning</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 612</a><br><small class="grey">Updated: 03/2022</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 612</a><br><small class="grey">Updated: 05/2022</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2020</small></td>
                 <td class="text-center"></td>
@@ -212,7 +212,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/bjv">BJVE-P16</a></td>
                 <td>10K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 07/2020</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 06/2022</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
@@ -220,7 +220,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/bjv">BJVE-P12</a></td>
                 <td>15K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 07/2020</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 06/2022</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
@@ -228,7 +228,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/bjv">BJVE-M24</a></td>
                 <td>22K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 07/2020</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 06/2022</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
@@ -236,7 +236,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/bjv">BJVE-MP12</a></td>
                 <td>22K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 07/2020</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 06/2022</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
@@ -380,6 +380,14 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/manuals/HCS-PRO_Manual.pdf" target="_blank" class="btn btn-sm">PL 661</a><br><small class="grey">Updated: 06/2020</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td><a href="/hose-containment">HMS-MP</a></td>
+                <td>Hose Management System<br>For AutoBox hose tractors</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/HMS_Manual.pdf" target="_blank" class="btn btn-sm">PL 721</a><br><small class="grey">Updated: 05/2022</small></td>
+                <td class="text-center"><a href="/assets/pdf/data-sheets/HMS_brochure.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
+                <td class="text-center"></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -863,12 +871,6 @@ permalink: /manuals
                 <td>HURRICANE<br>3D Self-rotating tank cleaning tool</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/HC_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HC.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
-              </tr>
-              <tr>
-                <td>HMS</td>
-                <td>hose management System model iteration</td>
-                <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HMS.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>HI-P6, HI-M9</td>
