--- a/sentinel-lp/sentinel.html
+++ b/sentinel-lp/sentinel.html
@@ -279,7 +279,7 @@
           <table>
             <tr>
               <td class="options-label-cell"><h3 class="options-label">Product Manual</h3></td>
-              <td><p class="options-text">This is your comprehensive guide to <strong class="bold-text resource-highlight">AutoBox 3L with Sentinel Automation Technology</strong>. Find part numbers, drawings, assembly instructions, troubleshooting tips and more.</p></td>
+              <td><p class="options-text">This is your comprehensive guide to <strong class="bold-text resource-highlight">AutoBox ABXS-3L with Sentinel Automation Technology</strong>. Find part numbers, drawings, assembly instructions, troubleshooting tips and more.</p></td>
               <td class="options-btn"><a href="/assets/pdf/manuals/Sentinel_3L_System_Manual.pdf" target="_blank" class="btn w-button" data-gtm-event="Product Manual Btn Clk">Get It</a></td>
             </tr>
             <tr>
