--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -1497,6 +1497,8 @@ master-slider: yes
                             <li>1 x <strong>BJVE 010</strong> Rear-Inner Shaft Sea</li>
                             <li>1 x <strong>WHR 006</strong> Rear-Outer Shaft Sea</li>
                             <li>1 x <strong>BJ 008</strong> O-Ring, Inlet Nut</li>
+                            <li>1 x <strong>BJ 071</strong> O-Ring, Inlet Nut</li>
+                            <li>1 x <strong>BJ 072</strong> O-Ring, Inlet Nut</li>
                             <li>2 x <strong>BJVE 026</strong> Port Plugs</li>
                             <li>1 x <strong>WHR 014</strong> Wave Spring</li>
                             <li>1 x <strong>BJ 048-M</strong> Medium Visc - 6 oz</li>
