--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -26,7 +26,7 @@ permalink: /waterblast-tools-automated-equipment
   <section class="container directory">
 
     <div class="mix exchanger-cleaning" data-name="autopack-3l" data-designation="automated">
-      <a href="/autopack-3l-sentinel" class="search-text">
+      <a href="/sentinel" class="search-text">
         <img src="/assets/img/product/autopack-3l-05.jpg" class="img-responsive" />
         <h3>AutoPack 3L Sentinel</h3>
         <h5>Smart Automated Equipment Kit</h5>
