--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -82,16 +82,15 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
 
-<!--
-    <div class="mix pipe-cleaning exchanger-cleaning" data-name="autopack-prop" data-designation="automated">
-      <a href="/autopack-prop" class="search-text">
+    <div class="mix pipe-cleaning exchanger-cleaning" data-name="autopack-compass" data-designation="automated">
+      <a href="/autopack-compass" class="search-text">
         <img src="/assets/img/product/autopack-pro-01.jpg" class="img-responsive" />
-        <h3>AutoPack P<span style="text-transform: lowercase;">RO</span>P</h3>
+        <h3>AutoPack Compass</h3>
         <h5>Automated Equipment Kit</h5>
         <table class="table">
           <tbody>
             <tr>
-              <td colspan="2" style="text-align:center;">Built around ProPositioner</td>
+              <td colspan="2" style="text-align:center;">Built around Compass Positioner</td>
             </tr>
             <tr>
               <td colspan="2" style="text-align:center;">Single lance tube cleaning</td>
@@ -101,7 +100,6 @@ permalink: /waterblast-tools-automated-equipment
         <button>View Details</button>
       </a>
     </div>
--->
 
     <div class="mix pipe-cleaning exchanger-cleaning" data-name="autopack-pro" data-designation="automated">
       <a href="/autopack-pro" class="search-text">
@@ -224,29 +222,7 @@ permalink: /waterblast-tools-automated-equipment
         <button>View Details</button>
       </a>
     </div>
-
-<!--
-    <div class="mix exchanger-cleaning accessories" data-name="autostroke" data-designation="automated">
-      <a href="/autostroke" class="search-text">
-        <img src="/assets/img/product/ast-01.jpg" class="img-responsive" />
-        <h3>AutoStroke</h3>
-        <h5>For AutoBox</h5>
-        <table class="table">
-          <tbody>
-            <tr>
-              <th colspan="2" style="text-align:center;">Clears plugged heat exchanger tubes</th>
-            </tr>
-            <tr>
-              <th>Hose Force</th>
-              <td>0–60 lb<br><span class="metric">0–27 kg</span></td>
-            </tr>
-          </tbody>
-        </table>
-        <button>View Details</button>
-      </a>
-    </div>
--->
-
+    
     <div class="mix exchanger-cleaning" data-name="bundle-blaster" data-designation="automated">
       <a href="/bundle-blaster" class="search-text">
         <img src="/assets/img/product/bundle-blaster-01.jpg" class="img-responsive" />
@@ -280,6 +256,25 @@ permalink: /waterblast-tools-automated-equipment
             </tr>
             <tr>
               <td colspan="2" style="text-align:center;">Quick to set up and easy to use</td>
+            </tr>
+          </tbody>
+        </table>
+        <button>View Details</button>
+      </a>
+    </div>
+    
+    <div class="mix exchanger-cleaning accessories" data-name="confined-space-kit" data-designation="automated">
+      <a href="/autostroke" class="search-text">
+        <img src="/assets/img/product/compass-kit-02.jpg" class="img-responsive" />
+        <h3>Confined Space Kit</h3>
+        <h5>For Compass Radial Indexer</h5>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th colspan="2" style="text-align:center;">Adopts Compass for remote-controlled domed bundle tube cleaning</th>
+            </tr>
+            <tr>
+              <td colspan="2" style="text-align:center;">Includes camera system, mounting plate, and guide tube to enable remote cleaning inside enclosed bundles</td>
             </tr>
           </tbody>
         </table>
