Compass launch edits

--- a/waterblast-automation/confined-space-kit.html
+++ b/waterblast-automation/confined-space-kit.html
@@ -74,7 +74,7 @@ master-slider: yes
         <h3>Compatible with:</h3> <a class="btn" href="/compass" data-toggle="tooltip" title="Compass Radial Indexer">COMPASS</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a>
       </div>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
+      <a href="https://info.stoneagetools.com/l/644393/2022-06-13/95f656" target="_blank" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
     </div>
   </div>
 </main>
