--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -264,7 +264,7 @@ permalink: /waterblast-tools-automated-equipment
     </div>
     
     <div class="mix exchanger-cleaning accessories" data-name="confined-space-kit" data-designation="automated">
-      <a href="/autostroke" class="search-text">
+      <a href="/confined-space-kit" class="search-text">
         <img src="/assets/img/product/compass-kit-02.jpg" class="img-responsive" />
         <h3>Confined Space Kit</h3>
         <h5>For Compass Radial Indexer</h5>
