--- a/waterblast-automation/compass.html
+++ b/waterblast-automation/compass.html
@@ -79,7 +79,7 @@ master-slider: yes
         <h3>Compatible with:</h3> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">PRO</a> <a class="btn" href="/confined-space-kit" data-toggle="tooltip" title="Confined Space Kit">CSK</a>
       </div>
 
-      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
+      <a href="https://info.stoneagetools.com/l/644393/2022-06-13/95f64z" target="_blank" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
     </div>
   </div>
 </main>
