new podcast episode 25

--- a/index.html
+++ b/index.html
@@ -545,9 +545,9 @@ landing: yes
     <div class="section-heading">
       <h2>Featured Story</h2>
     </div>
-    <a href="/24-philipp-eisenmann">
-      <img src="assets/img/podcast/episode-24-philipp-eisenmann.jpg" alt="Episode 24 - Philipp Eisenmann: What to Expect at IFAT 2022" class="img-responsive" />
-      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 24</strong><br><span class="grey">Philipp Eisenmann: What to Expect at IFAT 2022</span></p>
+    <a href="/25-wjta-certification">
+      <img src="assets/img/podcast/episode-25-wjta-certification.jpg" alt="Episode 25 - Peter Wright and Frank G. Romito: WJTA Hydroblasting Training and Certification" class="img-responsive" />
+      <p style="padding-top: 10px;"><strong>Industrial Theory Podcast Episode 25</strong><br><span class="grey">Peter Wright and Frank G. Romito: WJTA Hydroblasting Training and Certification</span></p>
     </a>
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
