--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -61,8 +61,20 @@
 <div id="compass-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/1OIb_vLBj7E?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="compass-vid-02">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/lelbH4autig?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="compass-csk-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/i99w35iL6-c?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="compass-name-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/IfEVb4DzXdY?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 <div id="hcs-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/sPuawSvBtDA?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
+<div id="hms-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/Fd88IAPf4W0?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="fin-fan-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/geLBK4Tuj_M?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
