--- a/index.html
+++ b/index.html
@@ -493,10 +493,10 @@ landing: yes
 -->
     
     <div class="row" style="margin-top:25px;">
-      <a href="https://few.bbiconferences.com/ema/DisplayPage.aspx?pageId=Home" target="_blank"><img src="/assets/img/thumb/upcoming-events-few-2022.jpg" class="img-responsive"/ alt="FEW Show 2022"></a>
+      <a href=" https://www.tristateseminar.com/" target="_blank"><img src="/assets/img/logo-tri-state-sm.png" class="img-responsive"/ alt="Tri-State Seminar"></a>
       <div class="caption text-center">
         <h4>
-          <span class="small"><strong><a href="https://few.bbiconferences.com/ema/DisplayPage.aspx?pageId=Home" target="_blank">FEW Show</a></strong><br>Fuel Ethanol Workshop &amp; Expo<br>June 13-15, 2022<br>Minneapolis, MN</span></h4>
+          <span class="small"><strong><a href="https://www.tristateseminar.com/" target="_blank">37th Annual Tri-State Seminar</a></strong><br>August 8-11, 2022<br>South Point, Las Vegas, NV</span></h4>
       </div>
     </div>
 
@@ -509,7 +509,12 @@ landing: yes
     <div class="section-heading">
       <h2>Latest News</h2>
     </div>
-    <ul class="home-news list-unstyled"> 
+    <ul class="home-news list-unstyled">       
+      <li>
+        <h4><a href="https://news.stoneagetools.com/stoneage-formally-releases-the-compass-for-cleaning-heat-exchangers-and-confined-spaces/">StoneAge Formally Releases the COMPASS for Cleaning Heat Exchangers and Confined Spaces </a></h4>
+        <p>StoneAge, Inc. is pleased to announce the official release of the Compass, a highly versatile, remotely operated indexing solution that delivers accurate tube-to-tube positioning for cleaning horizontal, vertical, and enclosed heat exchanger bundles.<br>
+        <small><i class="fa fa-newspaper-o"></i> Blog, June 2022</small></p>
+      </li> 
       <li>
         <h4><a href="https://news.stoneagetools.com/stoneage-expands-international-availability-of-sentinel-automation-technology-for-remotely-operated-heat-exchanger-cleaning/">StoneAge Expands International Availability of Sentinel Automation Technology for Remotely Operated Heat Exchanger Cleaning</a></h4>
         <p>StoneAge Inc. is pleased to announce that the Sentinel Automation Technology complete system, delivering exchanger tube cleaning up to 30% faster than traditional methods, is now available in more regions globally.<br>
@@ -530,11 +535,6 @@ landing: yes
         <p>Advancements in automation have transformed operational productivity and are helping save the lives of industrial, frontline workers around the world. <br>
         <small><i class="fa fa-newspaper-o"></i> Blog, December 2021</small></p>
       </li>
-      <li>
-        <h4><a href="https://news.stoneagetools.com/sentinel-automation-technology-for-automated-heat-exchanger-cleaning-is-here">Sentinel Automation Technology for Automated Heat Exchanger Cleaning Is Here</a></h4>
-        <p>StoneAge Inc. is pleased to announce the official release of Sentinel Automation Technology for automated exchanger tube cleaning, delivering a 30% performance increase over traditional methods.<br>
-        <small><i class="fa fa-newspaper-o"></i> Blog, October 2021</small></p>
-      </li> 
       <li><a href="https://news.stoneagetools.com/">More news here</a></li>
     </ul>
   </div>
