--- a/manuals.html
+++ b/manuals.html
@@ -359,32 +359,8 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/hose-containment">HCS-2L</a></td>
-                <td>hose management SYSTEM<br>For AutoBox ABX-2L</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/HCS-2L_Manual.pdf" target="_blank" class="btn btn-sm">PL 659</a><br><small class="grey">Updated: 06/2020</small></td>
-                <td class="text-center"><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
-                <td class="text-center"></td>
-              </tr>
-              <tr>
-                <td><a href="/hose-containment">HCS-3L</a></td>
-                <td>Hose Containment SYSTEM<br>For AutoBox ABX-3L &nbsp; ABX-3L</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/HCS-3L_Manual.pdf" target="_blank" class="btn btn-sm">PL 658</a><br><small class="grey">Updated: 08/2019</small></td>
-                <td class="text-center"><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 03/2018</small></td>
-                <td class="text-center"></td>
-              </tr>
-              <tr>
-                <td><a href="/hose-containment">HCS-PRO</a></td>
-                <td>Hose Containment SYSTEM<br>For AutoBox ABX-PRO</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/HCS-PRO_Manual.pdf" target="_blank" class="btn btn-sm">PL 661</a><br><small class="grey">Updated: 06/2020</small></td>
-                <td class="text-center"><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
-                <td class="text-center"></td>
-              </tr>
-              <tr>
                 <td><a href="/hose-containment">HMS-MP</a></td>
-                <td>Hose Management System<br>For AutoBox hose tractors</td>
+                <td>HOSE MANAGEMENT SYSTEM<br>For AutoBox hose tractors</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/HMS_Manual.pdf" target="_blank" class="btn btn-sm">PL 721</a><br><small class="grey">Updated: 05/2022</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/HMS_brochure.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"></td>
@@ -450,7 +426,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/torus-booms">SB</a></td>
                 <td>SIMPLE BOOM<br>Positioning device for Torus 3D tank/vessel cleaning</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/SB_Manual.pdf" target="_blank" class="btn btn-sm">PL 520</a><br><small class="grey">Updated: 01/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SB_Manual.pdf" target="_blank" class="btn btn-sm">PL 520</a><br><small class="grey">Updated: 06/2022</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -871,6 +847,24 @@ permalink: /manuals
                 <td>HURRICANE<br>3D Self-rotating tank cleaning tool</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/HC_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HC.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>HCS-2L</td>
+                <td>Hose Containment System<br>For AutoBox ABX-2L</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/HCS-2L_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HCS_02.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>HCS-3L</td>
+                <td>Hose Containment System<br>For AutoBox ABX-3L &nbsp; ABX-3L</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/HCS-3L_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HCS_02.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
+                <td>HCS-PRO</td>
+                <td>Hose Containment System<br>For AutoBox ABX-PRO</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/HCS-PRO_Manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_HCS_02.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>HI-P6, HI-M9</td>
