--- a/waterblast-automation/confined-space-kit.html
+++ b/waterblast-automation/confined-space-kit.html
@@ -31,7 +31,7 @@ master-slider: yes
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/compass-kit-02.jpg" alt="Compass Confined Space Kit">
             <img class="ms-thumb" src="/assets/img/product/thumb-compass-kit-02.jpg" alt="thumb">
-<!--              <a data-type="video" href="https://www.youtube.com/embed/jCTBlGM324Q"></a>-->
+              <a data-type="video" href="https://www.youtube.com/embed/i99w35iL6-c"></a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/compass-kit-03.jpg" alt="Compass Confined Space Kit">
@@ -87,8 +87,7 @@ master-slider: yes
         <ul>
           <li><a href="#section-bar-1"><span>Specifications</span></a></li>
           <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
-<!--          <li><a href="#section-bar-3"><span>Videos</span></a></li>-->
-<!--            <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
+          <li><a href="#section-bar-3"><span>Videos</span></a></li>
         </ul>
     </nav>
     <div class="content-wrap">
@@ -195,6 +194,33 @@ master-slider: yes
           <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
+      </section>
+      
+      <!-- Videos -->
+      <section id="section-bar-5">
+        <div class="row row-centered">
+          <div class="col-sm-4 col-centered">
+            <!-- lightbox call -->
+            <a href="#" data-featherlight="/assets/vid/vids.html #compass-vid-02">
+              <img src="assets/vid/thumb/compass-overview-vid-02.jpg" alt="Compass for exchanger cleaning video" class="img-responsive" />
+            </a>
+            <p class="caption">Compass Overview</p>
+          </div>
+          <div class="col-sm-4 col-centered">
+            <!-- lightbox call -->
+            <a href="#" data-featherlight="/assets/vid/vids.html #compass-csk-vid">
+              <img src="assets/vid/thumb/compass-csk-vid.jpg" alt="Compass Confined Space Kit video" class="img-responsive" />
+            </a>
+            <p class="caption">Confined Space Kit Overview</p>
+          </div>
+          <div class="col-sm-4 col-centered">
+            <!-- lightbox call -->
+            <a href="#" data-featherlight="/assets/vid/vids.html #compass-name-vid">
+              <img src="assets/vid/thumb/compass-name-vid.jpg" alt="Compass naming video" class="img-responsive" />
+            </a>
+            <p class="caption">Name That Compass</p>
+          </div>
+        </div>
       </section>
 
     </div><!-- /content -->
