--- a/waterblast-automation/hose-management.html
+++ b/waterblast-automation/hose-management.html
@@ -30,7 +30,7 @@ master-slider: yes
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/hms-01.jpg" alt="Hose management for exchanger cleaning">
             <img class="ms-thumb" src="/assets/img/product/thumb-hms-01.jpg" alt="thumb">
-<!--              <a data-type="video" href="https://www.youtube.com/embed/sPuawSvBtDA"> </a>-->
+              <a data-type="video" href="https://www.youtube.com/embed/Fd88IAPf4W0"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/hms-02.jpg" alt="Hose management for exchanger cleaning">
@@ -100,7 +100,7 @@ master-slider: yes
       <ul>
         <li><a href="#section-bar-1"><span>Specifications</span></a></li>
         <li><a href="#section-bar-4"><span>Manuals/Docs</span></a></li>
-<!--        <li><a href="#section-bar-5"><span>Videos</span></a></li>-->
+        <li><a href="#section-bar-5"><span>Videos</span></a></li>
       </ul>
     </nav>
     <div class="content-wrap">
@@ -196,18 +196,18 @@ master-slider: yes
         </aside>
       </section>
 
-      <!-- Videos 
+      <!-- Videos -->
       <section id="section-bar-5">
         <div class="row row-centered">
           <div class="col-sm-4 col-centered">
-            <!-- lightbox call
-            <a href="#" data-featherlight="/assets/vid/vids.html #hcs-vid">
-              <img src="assets/vid/thumb/hcs-vid.jpg" alt="hose management for exchanger cleaning video" class="img-responsive" />
+            <!-- lightbox call -->
+            <a href="#" data-featherlight="/assets/vid/vids.html #hms-vid">
+              <img src="assets/vid/thumb/hms-vid.jpg" alt="hose management for exchanger cleaning video" class="img-responsive" />
             </a>
-            <p class="caption">hose management System Overview Video</p>
+            <p class="caption">Hose Management System Overview</p>
           </div>
         </div>
-      </section>-->
+      </section>
 
     </div><!-- /content -->
   </div><!-- /tabs -->
