--- a/waterblast-automation/simple-boom.html
+++ b/waterblast-automation/simple-boom.html
@@ -120,7 +120,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Inlet Connection</th>
-                  <td colspan="2">1/2 NPT, 1-12 "M"</td>
+                  <td colspan="2">½” NPT, 3/4" Type M, M20 x 1.5</td>
                 </tr>
                 <tr>
                   <th>Maximum Hose ID</th>
