--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -100,6 +100,18 @@ permalink: /patents
         <td>Australia: 2009354020<br>Canada: 2752748<br>China: ZL200980157707.0<br>Europe: EP238747B1<br>Taiwan: I378828</td>
       </tr>
       <tr>
+        <td>BJV nozzle</td>
+        <td>BJV</td>
+        <td>10,118,185</td>
+        <td>Canada: CA 2954772<br>Europe: EP 3169454 B1</td>
+      </tr>
+      <tr>
+        <td>BJVE nozzle</td>
+        <td>BJVE</td>
+        <td>10,926,274</td>
+        <td>Canada: CA 3114095</td>
+      </tr>
+      <tr>
         <td>Boiler Tube Cleaner</td>
         <td>BTC</td>
         <td>9950348<br>10265736<br>10898931</td>
