--- a/podcast/industrial-theory.html
+++ b/podcast/industrial-theory.html
@@ -18,14 +18,25 @@ master-slider: yes
     <p>Hosted by Kerry Siggins, CEO of StoneAge, Industrial Theory is a podcast created specifically for the industrial cleaning industry. Kerry will speak with the industry’s most interesting and impactful leaders and doers about a wide range of topics including leadership, safety, technology, and training.</p>
     <h1 class="thin grey spaced margin-bottom-30" style="font-size:22px;">Episodes</h1>
     
-    <div class="row podcast-listing"><div class="col-sm-6">
+    <div class="row podcast-listing">
+      <div class="col-sm-6">
+        <a href="/26-erik-sanderson">
+          <img src="/assets/img/podcast/episode-26-erik-sanderson.jpg" class="img-responsive" alt="Peter Wright and Frank G. Romito: WJTA Hydroblasting Training and Certification" />
+          <h3 style="text-transform: none;">Erik Sanderson: Surviving a Waterjet Cut and Highlighting the Importance of Hydroblasting Safety</h3>
+          <p class="small gray">July 21, 2022</p>
+          <button class="btn">Listen</button>
+        </a>
+      </div>
+      <div class="col-sm-6">
         <a href="/25-wjta-certification">
           <img src="/assets/img/podcast/episode-25-wjta-certification.jpg" class="img-responsive" alt="Peter Wright and Frank G. Romito: WJTA Hydroblasting Training and Certification" />
-          <h3 style="text-transform: none;">Peter Wright &amp; Frank G. Romito: WJTA Hydroblasting Training and Certification</h3>
+          <h3 style="text-transform: none;">Peter Wright &amp; Frank G. Romito: WJTA Hydroblasting Training and Certification<br>&nbsp;</h3>
           <p class="small gray">June 21, 2022</p>
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/24-philipp-eisenmann">
           <img src="/assets/img/podcast/episode-24-philipp-eisenmann.jpg" class="img-responsive" alt="Marco van der Laan: How the Sentinel Cleaned Exchangers Four Times Faster" />
@@ -34,8 +45,6 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/23-peeters">
           <img src="/assets/img/podcast/episode-23-marco-van-der-laan.jpg" class="img-responsive" alt="Marco van der Laan: How the Sentinel Cleaned Exchangers Four Times Faster" />
@@ -44,6 +53,8 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/22-compass">
           <img src="/assets/img/podcast/episode-22-mike-and-kelley.jpg" class="img-responsive" alt="TJ Suiter: Protecting Wastewater Workers from Lethal Pathogens" />
@@ -52,16 +63,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/21-tom-costabile">
           <img src="/assets/img/podcast/episode-21-tom-costabile.jpg" class="img-responsive" alt="TJ Suiter: Protecting Wastewater Workers from Lethal Pathogens" />
-          <h3 style="text-transform: none;">Tom Costabile: Why Engineering is an Ideal Career Path</h3>
+          <h3 style="text-transform: none;">Tom Costabile: Why Engineering is an Ideal Career Path<br>&nbsp;</h3>
           <p class="small gray">February 4, 2022</p>
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/20-tj-suiter">
           <img src="/assets/img/podcast/episode-20-tj-suiter.jpg" class="img-responsive" alt="TJ Suiter: Protecting Wastewater Workers from Lethal Pathogens" />
@@ -70,8 +81,6 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/19-francesco-coletti">
           <img src="/assets/img/podcast/episode-19-francesco-coletti.jpg" class="img-responsive" alt="Dr. Francesco Coletti: The Power of Predictive Maintenance for Industrial Heat Transfer" />
@@ -80,24 +89,26 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/18-john-wolgamott">
           <img src="/assets/img/podcast/episode-18-john-wolgamott.jpg" class="img-responsive" alt="John Wolgamott: A Conversation with StoneAge Inc. Co-Founder" />
-          <h3 style="text-transform: none;">John Wolgamott: A Conversation with StoneAge Inc. Co-Founder<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">John Wolgamott: A Conversation with StoneAge Inc. Co-Founder</h3>
           <p class="small gray">November 18, 2021</p>
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/17-jerry-carter">
           <img src="/assets/img/podcast/episode-17-jerry-carter.jpg" class="img-responsive" alt="Adam Markham: Sentinel Automation Technology, A New Era for Industrial Cleaning" />
-          <h3 style="text-transform: none;">Jerry Carter: High-Pressure Hosing Innovation<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Jerry Carter: High-Pressure Hosing Innovation</h3>
           <p class="small gray">September 30, 2021</p>
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/16-adam-markham">
           <img src="/assets/img/podcast/episode-16-adam-markham.jpeg" class="img-responsive" alt="Adam Markham: Sentinel Automation Technology, A New Era for Industrial Cleaning" />
@@ -106,8 +117,6 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/15-steve-richmond">
           <img src="/assets/img/podcast/episode-15-steve-richmond.jpg" class="img-responsive" alt="Steve Richmond: Advancing Efficiencies through Enterprise Asset Management and Technology" />
@@ -116,16 +125,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/14-hans-borgt">
           <img src="/assets/img/podcast/episode-14-hans-borgt.jpg" class="img-responsive" alt="Episode 14 - Industrial Cleaning Safety and Reviving the European Waterjetting Institute" />
-          <h3 style="text-transform: none;">Hans Borgt: Industrial Cleaning Safety and Reviving the European Waterjetting Institute</h3>
+          <h3 style="text-transform: none;">Hans Borgt: Industrial Cleaning Safety and Reviving the European Waterjetting Institute<br>&nbsp;</h3>
           <p class="small gray">December 18, 2020</p>
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/13-chad-kalland">
           <img src="/assets/img/podcast/episode-13-chad-kalland.jpg" class="img-responsive" alt="Episode 13 - How One CEO Grew Their Company by Inspiring Employees to Rise to Their Fullest Potential" />
@@ -134,6 +143,8 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/12-samantha-cervantes">
           <img src="/assets/img/podcast/episode-12-samantha-cervantes.jpg" class="img-responsive" alt="Episode 12 - Don’t Get Left Behind: How Data Analytics Can Transform Our Industry" />
@@ -142,8 +153,6 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div> 
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/11-john-dijulius">
           <img src="/assets/img/podcast/episode-11-john-dijulius.jpg" class="img-responsive" alt="Episode 11 - Creating a Customer Experience that Makes Your Brand One That People Can't Live Without" />
@@ -152,16 +161,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/10-mahesh-parameswaran">
           <img src="/assets/img/podcast/episode-10-mahesh-parameswaren.jpg" class="img-responsive" alt="Episode 10 - Business in India and How COVID Will Speed up the Adaptation of Automation" />
-          <h3 style="text-transform: none;">Mahesh Parameswaran: Business in India and how COVID will speed up the adaptation of automation<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Mahesh Parameswaran: Business in India and how COVID will speed up the adaptation of automation</h3>
           <p class="small gray">September 17, 2020</p>
           <button class="btn">Listen</button>
         </a>
       </div>
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/9-peter-wright">
           <img src="/assets/img/podcast/episode-9-peter-wright.jpg" class="img-responsive" alt="Episode 9 - What is the WJTA up to and what are the plans for the future?" />
@@ -170,6 +179,8 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/8-steven-trevino">
           <img src="/assets/img/podcast/episode-8-steven-trevino.jpg" class="img-responsive" alt="Episode 8 - How does the world of robotics fit into industrial cleaning?" />
@@ -178,8 +189,6 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div> 
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/7-ron-justin">
           <img src="/assets/img/podcast/episode-7-ron-justin.jpg" class="img-responsive" alt="Episode 7 - Industrial automation will be a significant part of our future" />
@@ -188,6 +197,8 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/6-brad-clark">
           <img src="/assets/img/podcast/episode-6-brad-clark.jpg" class="img-responsive" alt="Episode 6-Growing an industrial cleaning company is never easy... What has set HCPSC apart" />
@@ -196,16 +207,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div> 
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/5-andreas-felske">
           <img src="/assets/img/podcast/episode-5-andreas-felske.jpg" class="img-responsive" alt="Episode 5 - Global Industrial Cleaning Safety Is Significantly Improving" />
-          <h3 style="text-transform: none;">Andreas Felske: With a Focused Leader, Global Industrial Cleaning Safety Is Significantly Improving<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Andreas Felske: With a Focused Leader, Global Industrial Cleaning Safety Is Significantly Improving</h3>
           <p class="small gray">March 30, 2020</p>
           <button class="btn">Listen</button>
         </a>
       </div> 
+    </div>
+    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/4-david-beckum">
           <img src="/assets/img/podcast/episode-4-david-beckum.jpg" class="img-responsive" alt="Episode 4-How to Create a Great Industrial Cleaning Company by Investing in Your People" />
@@ -214,8 +225,6 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div> 
-    </div>
-    <div class="row podcast-listing"> 
       <div class="col-sm-6">
         <a href="/3-hashim-moraisel">
           <img src="/assets/img/podcast/episode-3-Hashim-Moraisel.jpg" class="img-responsive" alt="Episode 3-Why Investing in People and Partnerships are Key Components of Success in the Industrial Cleaning Industry" />
@@ -224,16 +233,16 @@ master-slider: yes
           <button class="btn">Listen</button>
         </a>
       </div>
+    </div>
+    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/2-marlies-tump">
           <img src="/assets/img/podcast/episode-2-marliese-tump.png" class="img-responsive" alt="Episode 2-The Importance of Workforce Safety Training in the Industrial Cleaning Industry" />
-          <h3 style="text-transform: none;">Marlies Tump: The Importance of Workforce Safety Training in the Industrial Cleaning Industry<br>&nbsp;</h3>
+          <h3 style="text-transform: none;">Marlies Tump: The Importance of Workforce Safety Training in the Industrial Cleaning Industry</h3>
           <p class="small gray">December 5, 2019</p>
           <button class="btn">Listen</button>
         </a>
       </div> 
-    </div>
-    <div class="row podcast-listing">
       <div class="col-sm-6">
         <a href="/1-jimmy-peck">
           <img src="/assets/img/podcast/episode-1-jimmy-peck.png" class="img-responsive" alt="Episode 1-Leadership and Technology in the Industrial Cleaning Industry with Jimmy Peck" />
